# Pheme

./: .claude-init.json  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.claude/commands/: sonar-coverage.md  sonar-fix.md
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  release.yml  sonar.yml
src/pheme/: __init__.py  __main__.py  commands.py  config.py  healthcheck.py  huawei_client.py  logging_config.py  loops.py  matrix_client.py  store.py
tests/: test_commands.py  test_config.py  test_healthcheck.py  test_huawei_client.py  test_inbox_parsing.py  test_logging_config.py  test_loops.py  test_main.py  test_matrix_client.py  test_store.py
