[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pheme"
version = "0.1.0"
description = "A self-hosted SMS <-> Matrix bridge for Huawei HiLink 4G CPEs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Upellift99" }]
dependencies = [
    "huawei-lte-api>=1.11.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[project.scripts]
pheme = "pheme.__main__:main"
pheme-healthcheck = "pheme.healthcheck:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.report]
exclude_also = [
    # Module entrypoint guards are exercised only when run as a script.
    'if __name__ == .__main__.:',
]
